--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ __pycache__/
 chromedriver-win64.zip
 chromedriver-win64/
 chromedriver.exe
-nohub.out
+chromedriver
+nohup.out
+chromedriver-linux64.zip
+chromedriver-linux64
